src/test/deca/context/valid/ContextSansObjet/OperationsBooleennes/NeqNullNull.deca
//Description
//  Test d'inégalité entre deux null
//
//Réponse
//  ok
{
    null != null;
}